fix(css): Prevent layout displacement due to scrollbar

--- a/src/components/Layout.less
+++ b/src/components/Layout.less
@@ -1,5 +1,9 @@
 @import "~semantic-ui-less/semantic.less";
 
+body {
+  overflow-y: scroll;
+}
+
 html, body {
   background: #C6FFDD;
   background: -webkit-linear-gradient(to bottom, #f7797d, #FBD786, #C6FFDD);
